kubernetes/mongo-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: mongo
  name: mongo
spec:
  ports:
    - name: mongo
      port: 27017
      targetPort: 27017
  selector:
    app: mongo
