kubernetes/nuxt-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: nuxt
  name: nuxt
spec:
  ports:
    - name: webapp
      port: 7000
      targetPort: 7000
    - name: api
      port: 7001
      targetPort: 7001
  selector:
    app: nuxt
