kubernetes/proxy-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: proxy
  name: proxy
spec:
  ports:
    - port: 80
      targetPort: 80
      name: http
      protocol: TCP
  selector:
    app: proxy
